[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=1.2.1",
    "langchain-qdrant>=1.1.0",
    "load-dotenv>=0.1.0",
    "pypdf>=6.11.0",
]
